<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/paper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mdhwang.clovis_prototype_01.Dragging"
    tools:layout_editor_absoluteY="89dp">

    <ImageButton
        android:id="@+id/btn_left"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/btn_left"
        android:scaleType="fitCenter"
        android:src="@drawable/left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_right"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:contentDescription="@string/btn_right"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/right" />

    <ImageView
        android:id="@+id/first"
        android:layout_width="130dp"
        android:layout_height="140dp"
        android:layout_marginStart="120dp"
        android:contentDescription="@string/first"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/letter_a" />

    <ImageView
        android:id="@+id/second"
        android:layout_width="130dp"
        android:layout_height="140dp"
        android:layout_marginStart="250dp"
        android:contentDescription="@string/second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/letter_b" />

    <ImageView
        android:id="@+id/third"
        android:layout_width="130dp"
        android:layout_height="140dp"
        android:layout_marginStart="380dp"
        android:contentDescription="@string/third"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/letter_c" />

    <ImageView
        android:id="@+id/fourth"
        android:layout_width="130dp"
        android:layout_height="140dp"
        android:layout_marginStart="508dp"
        android:contentDescription="@string/fourth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/letter_d" />

    <ImageView
        android:id="@+id/fifth"
        android:layout_width="130dp"
        android:layout_height="140dp"
        android:layout_marginStart="640dp"
        android:contentDescription="@string/fifth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/letter_e" />

    <ImageView
        android:id="@+id/sixth"
        android:layout_width="130dp"
        android:layout_height="140dp"
        android:layout_marginStart="770dp"
        android:contentDescription="@string/sixth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/letter_f" />

    <ImageView
        android:id="@+id/seventh"
        android:layout_width="130dp"
        android:layout_height="140dp"
        android:layout_marginStart="900dp"
        android:contentDescription="@string/seventh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/letter_g" />

    <ImageView
        android:id="@+id/eighth"
        android:layout_width="130dp"
        android:layout_height="140dp"
        android:layout_marginStart="1030dp"
        android:contentDescription="@string/eighth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/letter_h" />

    <ImageView
        android:id="@+id/trash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/trash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/trash" />

</android.support.constraint.ConstraintLayout>
